[project]
name = "mr-localization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "mlflow>=1.27.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pandas-stubs>=3.0.3.260530",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "sionna>=2.0.1",
    "torch>=2.12.0",
]
